test/crab/invalid/func_arg_type.crab
fn main() -> Int {
    print_int("asdf")

    return 0
}

fn print_int(Int argument) {
    print(argument)
}
